--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "main": "index.js",
   "author": "Stanley Thijssen",
   "license": "MIT",
+  "private": true,
+  "scripts": {
+    "postinstall": "husky install",
+    "test": "echo 'this will run tests later'"
+  },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "eslint": "^8.4.1",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
@@ -13,6 +20,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
     "prettier": "^2.5.1"
   }
 }
