--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "postinstall": "husky install",
-    "test": "echo 'this will run tests later'"
+    "test": "echo 'this will run tests later'",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
