--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "countries-api-challenge",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Stanley Thijssen",
-  "license": "MIT",
-  "private": true,
-  "scripts": {
-    "postinstall": "husky install",
-    "test": "echo 'this will run tests later'",
-    "lint": "eslint ."
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^15.0.0",
-    "@commitlint/config-conventional": "^15.0.0",
-    "eslint": "^8.4.1",
-    "eslint-config-airbnb": "^19.0.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.4",
-    "prettier": "^2.5.1",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
-  }
+    "name": "countries-api-challenge",
+    "version": "1.0.0",
+    "main": "index.js",
+    "author": "Stanley Thijssen",
+    "license": "MIT",
+    "private": true,
+    "scripts": {
+        "postinstall": "husky install",
+        "test": "echo 'this will run tests later'",
+        "lint": "eslint . --ignore-path .gitignore",
+        "prettify": "prettier --write . --ignore-path .gitignore"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^15.0.0",
+        "@commitlint/config-conventional": "^15.0.0",
+        "eslint": "^8.4.1",
+        "eslint-config-airbnb": "^19.0.2",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.27.1",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "html-webpack-plugin": "^5.5.0",
+        "husky": "^7.0.4",
+        "prettier": "^2.5.1",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1"
+    }
 }
