feat: add lint-staged and run checks at same time

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "start": "webpack serve --open",
         "postinstall": "husky install",
         "test": "echo 'this will run tests later'",
-        "lint": "eslint . --ignore-path .gitignore",
-        "prettify": "prettier --write . --ignore-path .gitignore"
+        "lint": "eslint --ext .js . --ignore-path .gitignore",
+        "prettier": "prettier \"**/*.+(js|json)\" --ignore-path .gitignore",
+        "format": "yarn prettier --write",
+        "check-format": "yarn prettier --list-different",
+        "validate": "yarn check-format & yarn lint"
     },
     "devDependencies": {
         "@commitlint/cli": "^15.0.0",
@@ -25,6 +28,7 @@
         "eslint-plugin-react-hooks": "^4.3.0",
         "html-webpack-plugin": "^5.5.0",
         "husky": "^7.0.4",
+        "lint-staged": "^12.1.2",
         "prettier": "^2.5.1",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
