--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -3,7 +3,6 @@
         "eslint"
     ],
     "**/*.+(js|json)": [
-        "prettier --write",
-        "git add"
+        "prettier --write"
     ]
 }
