--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
         "validate": "yarn check-format & yarn lint"
     },
     "devDependencies": {
+        "@babel/core": "^7.16.5",
+        "@babel/preset-env": "^7.16.5",
         "@commitlint/cli": "^15.0.0",
         "@commitlint/config-conventional": "^15.0.0",
+        "babel-loader": "^8.2.3",
         "eslint": "^8.4.1",
         "eslint-config-airbnb": "^19.0.2",
         "eslint-config-prettier": "^8.3.0",
