--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "plugins": ["react", "prettier"],
     "rules": {
         "prettier/prettier": "error",
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "react/function-component-definition": "off",
+        "arrow-body-style": "off"
     }
 }
