--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "prettier/prettier": "error",
         "import/prefer-default-export": "off",
         "react/function-component-definition": "off",
-        "arrow-body-style": "off"
+        "arrow-body-style": "off",
+        "react/react-in-jsx-scope": "off"
     }
 }
