--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
         "@babel/core": "^7.16.5",
         "@babel/preset-env": "^7.16.5",
         "@babel/preset-react": "^7.16.5",
+        "@babel/preset-typescript": "^7.16.5",
         "@commitlint/cli": "^15.0.0",
         "@commitlint/config-conventional": "^15.0.0",
+        "@types/react": "^17.0.37",
+        "@types/react-dom": "^17.0.11",
         "babel-loader": "^8.2.3",
         "eslint": "^8.4.1",
         "eslint-config-airbnb": "^19.0.2",
@@ -34,6 +37,8 @@
         "husky": "^7.0.4",
         "lint-staged": "^12.1.2",
         "prettier": "^2.5.1",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.4",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.6.0"
