--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@commitlint/config-conventional": "^15.0.0",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.7.0",
+        "@typescript-eslint/parser": "^5.7.0",
         "babel-loader": "^8.2.3",
         "eslint": "^8.4.1",
         "eslint-config-airbnb": "^19.0.2",
@@ -37,7 +39,6 @@
         "husky": "^7.0.4",
         "lint-staged": "^12.1.2",
         "prettier": "^2.5.1",
-        "ts-loader": "^9.2.6",
         "typescript": "^4.5.4",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
