--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@typescript-eslint/eslint-plugin": "^5.7.0",
         "@typescript-eslint/parser": "^5.7.0",
         "babel-loader": "^8.2.3",
+        "css-loader": "^6.5.1",
         "eslint": "^8.4.1",
         "eslint-config-airbnb": "^19.0.2",
         "eslint-config-prettier": "^8.3.0",
@@ -39,6 +40,7 @@
         "husky": "^7.0.4",
         "lint-staged": "^12.1.2",
         "prettier": "^2.5.1",
+        "style-loader": "^3.3.1",
         "typescript": "^4.5.4",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
