--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "html-webpack-plugin": "^5.5.0",
         "husky": "^7.0.4",
         "lint-staged": "^12.1.2",
+        "mini-css-extract-plugin": "^2.4.5",
         "prettier": "^2.5.1",
         "style-loader": "^3.3.1",
         "typescript": "^4.5.4",
