--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "private": true,
     "scripts": {
-        "start": "webpack serve --open",
+        "webpack": "webpack",
+        "start": "webpack serve --mode development --open",
+        "build": "webpack -- --mode production",
         "postinstall": "husky install",
         "test": "echo 'this will run tests later'",
         "lint": "eslint --ext .js . --ignore-path .gitignore",
@@ -45,7 +47,8 @@
         "typescript": "^4.5.4",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.6.0"
+        "webpack-dev-server": "^4.6.0",
+        "webpack-merge": "^5.8.0"
     },
     "dependencies": {
         "react": "^17.0.2",
