--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@typescript-eslint/parser": "^5.7.0",
         "babel-loader": "^8.2.3",
         "css-loader": "^6.5.1",
+        "css-minimizer-webpack-plugin": "^3.3.0",
         "eslint": "^8.4.1",
         "eslint-config-airbnb": "^19.0.2",
         "eslint-config-prettier": "^8.3.0",
