--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "prettier": "prettier \"**/*.+(js|json)\" --ignore-path .gitignore",
         "format": "yarn prettier --write",
         "check-format": "yarn prettier --list-different",
-        "validate": "yarn check-format & yarn lint & yarn tsc"
+        "validate": "yarn check-format && yarn lint && yarn tsc"
     },
     "devDependencies": {
         "@babel/core": "^7.16.5",
