--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,8 +1,8 @@
 {
-    "*.+(js)": [
+    "*.+(js|jsx|ts|tsx)": [
         "eslint"
     ],
-    "**/*.+(js|json)": [
+    "**/*.+(js|jsx|json|ts|tsx)": [
         "prettier --write"
     ]
 }
