--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
         "husky": "^7.0.4",
         "lint-staged": "^12.1.2",
         "mini-css-extract-plugin": "^2.4.5",
+        "postcss": "^8.4.5",
+        "postcss-loader": "^6.2.1",
+        "postcss-preset-env": "^7.0.2",
         "prettier": "^2.5.1",
         "style-loader": "^3.3.1",
         "typescript": "^4.5.4",
