--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,8 @@
                 "tsx": "never"
             }
         ],
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error"]
     }
 }
