--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
+        "core-js": "2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
