--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
         ],
         "react/prop-types": "off",
         "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": ["error"]
+        "@typescript-eslint/no-unused-vars": ["error"],
+        "default-param-last": "off"
     }
 }
