--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
         "react/prop-types": "off",
         "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": ["error"],
-        "default-param-last": "off"
+        "default-param-last": "off",
+        "react/require-default-props": "off"
     }
 }
