--- a/package.json
+++ b/package.json
@@ -57,7 +57,11 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.3.0",
+        "@fortawesome/free-regular-svg-icons": "^6.0.0",
+        "@fortawesome/react-fontawesome": "^0.1.17",
         "axios": "^0.25.0",
+        "babel-plugin-macros": "^3.1.0",
         "core-js": "2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
