--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.27.1",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "husky": "^7.0.4",
         "lint-staged": "^12.1.2",
@@ -50,6 +51,7 @@
         "prettier": "^2.5.1",
         "style-loader": "^3.3.1",
         "typescript": "^4.5.4",
+        "url-loader": "^4.1.1",
         "webpack": "^5.65.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.1",
