--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "core-js": "2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-lottie": "^1.2.3",
         "react-redux": "^7.2.6",
         "redux": "^4.1.2",
         "redux-saga": "^1.1.3",
