--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
+        "@types/react-lottie": "^1.2.6",
         "axios": "^0.25.0",
         "babel-plugin-macros": "^3.1.0",
         "core-js": "2",
