--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "react-dom": "^17.0.2",
         "react-lottie": "^1.2.3",
         "react-redux": "^7.2.6",
+        "react-router-dom": "6",
         "redux": "^4.1.2",
         "redux-saga": "^1.1.3",
         "typescript-fsa": "^3.0.0"
